--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 # Documentation: http://docs.travis-ci.com/user/languages/c/
 language: c
-
 os:
   - osx
-
 before_install:
+    - brew uninstall oclint
     - brew install gcc
-
 script:
   - make lib
   - make tests
   - OMP_NUM_THREADS=4 ./test_drivers 3 3
+notifications:
+  email: false
