--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 # Documentation: http://docs.travis-ci.com/user/languages/c/
+sudo: required
 language: c
 matrix:
   include:
@@ -14,8 +15,7 @@ matrix:
             - g++-8
             - libopenblas-base
       env:
-        - MATRIX_EVAL="CC=gcc-8 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
-
+        - MATRIX_EVAL="sudo apt-get install libopenblas-base && CC=gcc-8 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
 before_install:
   - eval "${MATRIX_EVAL}"
 
