--- a/.travis.yml
+++ b/.travis.yml
@@ -6,19 +6,19 @@ matrix:
     - os: osx
       osx_image: xcode10.1
       env:
-        - MATRIX_EVAL="brew update && brew install gcc openblas fftw && CC=gcc-8"
+        - MATRIX_EVAL="brew update && brew install gcc openblas fftw && CC=gcc-7"
     - os: linux
       addons:
         apt:
           sources:
             - ubuntu-toolchain-r-test
           packages:
-            - g++-8
+            - g++-7
             - libblas-dev
             - libopenblas-base
             - libfftw3-dev
       env:
-        - MATRIX_EVAL="CC=gcc-8 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
+        - MATRIX_EVAL="CC=gcc-7 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
 
 before_install:
 #  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
@@ -33,6 +33,9 @@ script:
   - ./test_rotations
   - OMP_NUM_THREADS=4 ./test_drivers 3 3 0
   - OMP_NUM_THREADS=4 ./test_fftw 3 3 0
+  - make examples
+  - ./additiontheorem
+  - ./holomorphic
 
 notifications:
   email: false
