--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 # Documentation: http://docs.travis-ci.com/user/languages/c/
-sudo: true
 language: c
 matrix:
   include:
@@ -9,6 +8,12 @@ matrix:
       env:
         - C_COMPILER='gcc-7'
         - MATRIX_EVAL="brew update && brew install gcc@7 openblas fftw"
+    - os: osx
+      osx_image: xcode10.1
+      compiler: clang-6
+      env:
+        - C_COMPILER='/usr/local/opt/llvm/bin/clang'
+        - MATRIX_EVAL="brew update && brew install llvm@6 openblas fftw"
     - os: linux
       compiler: gcc-7
       addons:
