--- a/.travis.yml
+++ b/.travis.yml
@@ -2,26 +2,34 @@
 language: c
 matrix:
   include:
+    # Minimum system requirements
     - os: osx
-      osx_image: xcode10.1
+      osx_image: xcode8
+      compiler: gcc-4.9
+      env: MATRIX_EVAL="brew update && brew install gcc@4.9 openblas fftw && export CC=gcc-4.9"
+    # Recommended system requirements
+    - os: osx
+      osx_image: xcode10
       compiler: gcc-7
+      env: MATRIX_EVAL="brew update && brew install gcc@7 openblas fftw && export CC=gcc-7"
+    # Minimum requirements
+    - os: linux
+      compiler: gcc-4.9
+      addons:
+        apt:
+          sources: ubuntu-toolchain-r-test
+          packages: ['g++-4.9', 'libblas-dev', 'libopenblas-base', 'libfftw3-dev']
       env:
-        - C_COMPILER='gcc-7'
-        - MATRIX_EVAL="brew update && brew install gcc@7 openblas fftw"
+        - MATRIX_EVAL="export CC=gcc-4.9 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
+    # Recommended system requirements
     - os: linux
       compiler: gcc-7
       addons:
         apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-7
-            - libblas-dev
-            - libopenblas-base
-            - libfftw3-dev
+          sources: ubuntu-toolchain-r-test
+          packages: ['g++-7', 'libblas-dev', 'libopenblas-base', 'libfftw3-dev']
       env:
-        - C_COMPILER='gcc-7'
-        - MATRIX_EVAL="export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
+        - MATRIX_EVAL="export CC=gcc-7 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
 
 before_install:
   - eval "${MATRIX_EVAL}"
