--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ matrix:
   include:
     # Minimum system requirements
     - os: osx
-      osx_image: xcode8
+      osx_image: xcode10
       compiler: gcc-4.9
-      env: MATRIX_EVAL="brew update && brew install fftw && export CC=gcc-4.9 && export BLAS=APPLEBLAS"
+      env: MATRIX_EVAL="brew update && brew install gcc@4.9 fftw && export CC=gcc-4.9 && export BLAS=APPLEBLAS"
     # Recommended system requirements
     - os: osx
       osx_image: xcode10
