--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,11 +1,8 @@
 # Documentation: http://docs.travis-ci.com/user/languages/c/
-matrix:
-  # Minimum system requirements
-  - os: Visual Studio 2013
-    env: MATRIX_EVAL="export CC=C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\gcc-7"
-  # Recommended system requirements
-  - os: Visual Studio 2017
-    env: MATRIX_EVAL="export CC=C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\gcc-7"
+image:
+  - Visual Studio 2013
+  - Visual Studio 2015
+  - Visual Studio 2017
 
 install: eval "${MATRIX_EVAL}"
 
