--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -5,7 +5,7 @@ image:
   - Visual Studio 2017
 
 install:
-  - set PATH=C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\bin;%PATH%
+  - set PATH=C:\mingw-w64\bin;%PATH%
 
 build_script:
   - gcc --version
