--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -5,12 +5,12 @@ image:
   - Visual Studio 2017
 
 install:
-  - set PATH=%PATH%;C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\bin
+  - set PATH=%PATH%;C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin\
 
 build_script:
-  - g++ --version
-  - g++ -v
-  - g++ test_win.c -o test_win
+  - gcc --version
+  - gcc -v
+  - gcc test_win.c -o test_win
 
 test_script:
   - test_win.exe
