--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,11 +6,12 @@ image:
 
 install:
   - set PATH=%PATH%;C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin\
+  - set CC=gcc-7
 
 build_script:
-  - gcc --version
-  - gcc -v
-  - gcc test_win.c -o test_win
+  - %CC% --version
+  - %CC% -v
+  - %CC% test_win.c -o test_win
 
 test_script:
   - test_win.exe
