--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -7,7 +7,11 @@ image:
 install:
   - set PATH=%PATH%;C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin\
   - set CC=gcc-7
-  - .\vcpkg install fftw3
+  - pwd
+  - cd c:\tools\vcpkg
+    vcpkg integrate install
+  - pwd
+  - vcpkg install fftw3
   #- nuget Install-Package OpenBLAS -Version 0.2.14.1
   #- nuget Install-Package libfftw -Version 3.3.4
 
