--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,7 +8,7 @@ cache: c:\tools\vcpkg\installed\
 install:
   - set PATH=%PATH%;c:\tools\vcpkg
   - set PATH=%PATH%;C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin\
-  - set CC=gcc-7
+  - set CC=gcc
   - vcpkg integrate install
   - vcpkg install openblas:x64-windows fftw3:x64-windows
   #- nuget Install-Package OpenBLAS -Version 0.2.14.1
@@ -18,7 +18,7 @@ build_script:
   - gcc --version
   - gcc -v
   - gcc test_win.c -o test_win
-  - mingw32-make lib
+  - mingw32-make test_win
 
 test_script:
   - test_win.exe
