--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,7 +10,8 @@ install:
   - set PATH=%PATH%;C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin\
   - set CC=gcc
   - set BLAS=OPENBLAS
-  - cd c:\tools\vcpkg\installed\
+  - cd c:\tools\vcpkg\installed\x64-windows\include
+  - cd c:\tools\vcpkg\installed\x64-windows\bin
   - ls -all
   - cd c:\projects\fasttransforms\
   - vcpkg integrate install
