--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -11,6 +11,7 @@ install:
   - set CC=gcc
   - set BLAS=OPENBLAS
   - cd c:\tools\vcpkg\installed\x64-windows\include
+  - ls -all
   - cd c:\tools\vcpkg\installed\x64-windows\bin
   - ls -all
   - cd c:\projects\fasttransforms\
