--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -20,7 +20,7 @@ install:
 
 build_script:
   - gcc --version
-  - gcc test_win.c -I./src -I c:\tools\vcpkg\installed\x86-windows\include -L c:\tools\vcpkg\installed\x86-windows\bin -lblas -o test_win
+  - gcc src/test_win.c -I c:\tools\vcpkg\installed\x86-windows\include -L c:\tools\vcpkg\installed\x86-windows\bin -lblas -o test_win
   #- mingw32-make test_win
 
 test_script:
