--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -20,8 +20,8 @@ install:
 
 build_script:
   - gcc --version
-  - gcc src/test_win.c -I c:\tools\vcpkg\installed\x86-windows\include -L c:\tools\vcpkg\installed\x86-windows\bin -lblas -o test_win
-  #- mingw32-make test_win
+  - gcc src/test_win.c -I c:\tools\vcpkg\installed\x64-windows\include -L c:\tools\vcpkg\installed\x64-windows\bin -lblas -o test_win
+  - mingw32-make test_win
 
 test_script:
   - test_win.exe
