--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,6 +12,8 @@ install:
   - set BLAS=OPENBLAS
   - cd c:\tools\vcpkg\installed\x64-windows\include
   - ls -all
+  - cd c:\tools\vcpkg\installed\x64-windows\include\openblas
+  - ls -all
   - cd c:\tools\vcpkg\installed\x64-windows\bin
   - ls -all
   - cd c:\projects\fasttransforms\
