--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -22,7 +22,7 @@ install:
 
 build_script:
   - gcc --version
-  - gcc src/test_win.c -I c:\tools\vcpkg\installed\x64-windows\include -L c:\tools\vcpkg\installed\x64-windows\bin -lblas -o test_win
+  - gcc src/test_win.c -I c:\tools\vcpkg\installed\x64-windows\include -I c:\tools\vcpkg\installed\x64-windows\include\openblas -L c:\tools\vcpkg\installed\x64-windows\bin -lblas -o test_win
   - mingw32-make test_win
 
 test_script:
