--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -19,6 +19,7 @@ install:
   - cd c:\projects\fasttransforms\
   - vcpkg integrate install
   - vcpkg install openblas:x64-windows fftw3:x64-windows
+  - mklink "c:\tools\vcpkg\installed\x64-windows\bin\blas.dll" "c:\tools\vcpkg\installed\x64-windows\bin\openblas.dll"
   - set PATH=c:\tools\vcpkg\installed\x64-windows\bin;%PATH%
 
 build_script:
