--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -20,6 +20,9 @@ install:
   - vcpkg integrate install
   - vcpkg install openblas:x64-windows fftw3:x64-windows
   - ren c:\tools\vcpkg\installed\x64-windows\include\cblas.h cblas_old.h
+  - cd c:\tools\vcpkg\installed\x64-windows\include
+  - ls -all
+  - cd c:\projects\fasttransforms\
   - mklink c:\tools\vcpkg\installed\x64-windows\include\openblas\cblas.h c:\tools\vcpkg\installed\x64-windows\include\cblas.h
   - mklink c:\tools\vcpkg\installed\x64-windows\bin\blas.dll c:\tools\vcpkg\installed\x64-windows\bin\openblas.dll
   - set PATH=c:\tools\vcpkg\installed\x64-windows\bin;%PATH%
