--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -19,9 +19,12 @@ install:
   - cd c:\projects\fasttransforms\
   - vcpkg integrate install
   - vcpkg install openblas:x64-windows fftw3:x64-windows
+  #- cd c:\tools\vcpkg\installed\x64-windows\bin
+  #- ls -all
+  #- cd c:\projects\fasttransforms\
   - ren c:\tools\vcpkg\installed\x64-windows\include\cblas.h cblas_old.h
   - mklink c:\tools\vcpkg\installed\x64-windows\include\cblas.h c:\tools\vcpkg\installed\x64-windows\include\openblas\cblas.h
-  - mklink c:\tools\vcpkg\installed\x64-windows\bin\blas.dll c:\tools\vcpkg\installed\x64-windows\bin\openblas.dll
+  #- mklink c:\tools\vcpkg\installed\x64-windows\bin\blas.dll c:\tools\vcpkg\installed\x64-windows\bin\openblas.dll
   - set PATH=c:\tools\vcpkg\installed\x64-windows\bin;%PATH%
 
 build_script:
