--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -20,6 +20,7 @@ install:
   - vcpkg integrate install
   - vcpkg install openblas:x64-windows fftw3:x64-windows
   - mklink c:\projects\fasttransforms\src\cblas.h c:\tools\vcpkg\installed\x64-windows\include\openblas\cblas.h
+  - mklink c:\projects\fasttransforms\src\openblas_config.h c:\tools\vcpkg\installed\x64-windows\include\openblas\openblas_config.h
   - mklink c:\projects\fasttransforms\blas.dll c:\tools\vcpkg\installed\x64-windows\bin\openblas.dll
   - mklink c:\projects\fasttransforms\src\fftw3.h c:\tools\vcpkg\installed\x64-windows\include\fftw3.h
   - mklink c:\projects\fasttransforms\fftw3.dll c:\tools\vcpkg\installed\x64-windows\bin\fftw3.dll
