--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -24,6 +24,7 @@ install:
   - mklink c:\projects\fasttransforms\blas.dll c:\tools\vcpkg\installed\x64-windows\bin\openblas.dll
   - mklink c:\projects\fasttransforms\src\fftw3.h c:\tools\vcpkg\installed\x64-windows\include\fftw3.h
   - mklink c:\projects\fasttransforms\fftw3.dll c:\tools\vcpkg\installed\x64-windows\bin\fftw3.dll
+  - delete c:\tools\vcpkg\installed\x64-windows\bin\blas.dll
   #- cd c:\tools\vcpkg\installed\x64-windows\bin
   #- ls -all
   #- cd c:\projects\fasttransforms\
