--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -24,13 +24,12 @@ install:
   - mklink c:\projects\fasttransforms\blas.dll c:\tools\vcpkg\installed\x64-windows\bin\openblas.dll
   - mklink c:\projects\fasttransforms\src\fftw3.h c:\tools\vcpkg\installed\x64-windows\include\fftw3.h
   - mklink c:\projects\fasttransforms\fftw3.dll c:\tools\vcpkg\installed\x64-windows\bin\fftw3.dll
-  - del c:\tools\vcpkg\installed\x64-windows\bin\blas.dll
   #- cd c:\tools\vcpkg\installed\x64-windows\bin
   #- ls -all
   #- cd c:\projects\fasttransforms\
   #- ren c:\tools\vcpkg\installed\x64-windows\include\cblas.h cblas_old.h
   #- mklink c:\tools\vcpkg\installed\x64-windows\include\cblas.h c:\tools\vcpkg\installed\x64-windows\include\openblas\cblas.h
-  - set PATH=c:\tools\vcpkg\installed\x64-windows\bin;%PATH%
+  #- set PATH=c:\tools\vcpkg\installed\x64-windows\bin;%PATH%
 
 build_script:
   - gcc --version
