--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -29,7 +29,7 @@ install:
   #- cd c:\projects\fasttransforms\
   #- ren c:\tools\vcpkg\installed\x64-windows\include\cblas.h cblas_old.h
   #- mklink c:\tools\vcpkg\installed\x64-windows\include\cblas.h c:\tools\vcpkg\installed\x64-windows\include\openblas\cblas.h
-  #- set PATH=c:\tools\vcpkg\installed\x64-windows\bin;%PATH%
+  - set PATH=c:\tools\vcpkg\installed\x64-windows\bin;%PATH%
 
 build_script:
   - gcc --version
