--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,13 +10,6 @@ install:
   - set PATH=%PATH%;C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin\
   - set CC=gcc
   - set BLAS=OPENBLAS
-  - cd c:\tools\vcpkg\installed\x64-windows\include
-  - ls -all
-  - cd c:\tools\vcpkg\installed\x64-windows\include\openblas
-  - ls -all
-  - cd c:\tools\vcpkg\installed\x64-windows\bin
-  - ls -all
-  - cd c:\projects\fasttransforms\
   - vcpkg integrate install
   - vcpkg install openblas:x64-windows fftw3:x64-windows
   - mklink c:\projects\fasttransforms\src\cblas.h c:\tools\vcpkg\installed\x64-windows\include\openblas\cblas.h
@@ -29,6 +22,9 @@ install:
 build_script:
   - gcc --version
   - mingw32-make test_win
+  - mingw32-make examples
 
 test_script:
   - test_win.exe
+  - ./additiontheorem.exe
+  - ./holomorphic.exe
