--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,8 +8,7 @@ cache: c:\tools\vcpkg\installed\
 install:
   - set PATH=%PATH%;c:\tools\vcpkg
   - set PATH=%PATH%;C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin\
-  - set CC=gcc
-  - set BLAS=OPENBLAS
+  - set CC=gcc-7 && set BLAS=OPENBLAS
   - vcpkg integrate install
   - vcpkg install openblas:x64-windows fftw3:x64-windows
   - mklink c:\projects\fasttransforms\src\cblas.h c:\tools\vcpkg\installed\x64-windows\include\openblas\cblas.h
@@ -28,6 +27,7 @@ build_script:
 test_script:
   - test_transforms.exe
   - test_rotations.exe
+  - set OMP_NUM_THREADS=4
   - test_drivers.exe 3 3 0
   - additiontheorem.exe
   - holomorphic.exe
