--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,4 +1,4 @@
-# Documentation: http://docs.travis-ci.com/user/languages/c/
+# Documentation: http://www.appveyor.com/docs/appveyor-yml/
 image:
   - Visual Studio 2015
   - Visual Studio 2017
