Example on triangle!
uses differentiation of Proriol series developed by @dlfivefifty et al. in https://arxiv.org/abs/1902.04863

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -29,4 +29,5 @@ test_script:
   - set OMP_NUM_THREADS=4
   - test_drivers.exe 3 3 0
   - additiontheorem.exe
+  - calculus.exe
   - holomorphic.exe
