--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -3,6 +3,7 @@ image:
   - Visual Studio 2015
   - Visual Studio 2017
 
+cache: c:\tools\vcpkg\installed\
 
 install:
   - set PATH=%PATH%;c:\tools\vcpkg
@@ -15,6 +16,9 @@ install:
   - mklink c:\projects\fasttransforms\src\fftw3.h c:\tools\vcpkg\installed\x64-windows\include\fftw3.h
   - mklink c:\projects\fasttransforms\fftw3.dll c:\tools\vcpkg\installed\x64-windows\bin\fftw3.dll
   - set PATH=c:\tools\vcpkg\installed\x64-windows\bin;%PATH%
+
+allow_failures:
+    - image: Visual Studio 2015
 
 build_script:
   - gcc --version
