--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,17 +9,16 @@ install:
   - set PATH=%PATH%;c:\tools\vcpkg
   - set PATH=%PATH%;C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin\
   - set CC=gcc && set BLAS=OPENBLAS
-  - vcpkg install openblas:x64-windows fftw3:x64-windows mpfr:x64-windows
+  - vcpkg install openblas:x64-windows fftw3:x64-windows mpir:x64-windows mpfr:x64-windows
   - mklink c:\projects\fasttransforms\src\cblas.h c:\tools\vcpkg\installed\x64-windows\include\openblas\cblas.h
   - mklink c:\projects\fasttransforms\src\openblas_config.h c:\tools\vcpkg\installed\x64-windows\include\openblas\openblas_config.h
   - mklink c:\projects\fasttransforms\blas.dll c:\tools\vcpkg\installed\x64-windows\bin\openblas.dll
   - mklink c:\projects\fasttransforms\src\fftw3.h c:\tools\vcpkg\installed\x64-windows\include\fftw3.h
   - mklink c:\projects\fasttransforms\fftw3.dll c:\tools\vcpkg\installed\x64-windows\bin\fftw3.dll
   - mklink c:\projects\fasttransforms\src\mpfr.h c:\tools\vcpkg\installed\x64-windows\include\mpfr.h
-  - cd c:\tools\vcpkg\installed\x64-windows\include\
-  - ls
   - mklink c:\projects\fasttransforms\src\gmp.h c:\tools\vcpkg\installed\x64-windows\include\gmp.h
-  - cd c:\projects\fasttransforms\
+  - mklink c:\projects\fasttransforms\src\mpir.h c:\tools\vcpkg\installed\x64-windows\include\mpir.h
+  - mklink c:\projects\fasttransforms\mpir.dll c:\tools\vcpkg\installed\x64-windows\bin\mpir.dll
   - mklink c:\projects\fasttransforms\mpfr.dll c:\tools\vcpkg\installed\x64-windows\bin\mpfr.dll
   - set PATH=c:\tools\vcpkg\installed\x64-windows\bin;%PATH%
 
