--- a/.travis.yml
+++ b/.travis.yml
@@ -60,5 +60,13 @@ deploy:
   on:
     branch: master
 
+deploy:
+  provider: releases
+  api_key: $FT_BINARIES
+  file: libfasttransforms.*
+  skip_cleanup: true
+  on:
+    tags: true
+
 notifications:
   email: false
