--- a/.travis.yml
+++ b/.travis.yml
@@ -53,20 +53,18 @@ after_success:
   - doxygen Doxyfile
 
 deploy:
-  provider: pages
-  skip_cleanup: true
-  local_dir: docs/html
-  github_token: $FT_DOCS
-  on:
-    branch: master
-
-deploy:
-  provider: releases
-  api_key: $FT_BINARIES
-  file: libfasttransforms.*
-  skip_cleanup: true
-  on:
-    tags: true
+  - provider: pages
+    skip_cleanup: true
+    local_dir: docs/html
+    github_token: $FT_DOCS
+    on:
+      branch: master
+  - provider: releases
+    api_key: $FT_BINARIES
+    file: libfasttransforms.*
+    skip_cleanup: true
+    on:
+      tags: true
 
 notifications:
   email: false
