--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
         homebrew:
           packages: ['gcc@4.9', 'fftw', 'mpfr', 'doxygen']
           update: true
-      env: MATRIX_EVAL="export CC=gcc-4.9 && export BLAS=APPLEBLAS"
+      env: MATRIX_EVAL="export CC=gcc-4.9 && export FT_USE_APPLEBLAS=1"
     - os: osx
       osx_image: xcode10
       compiler: gcc-5
@@ -19,7 +19,7 @@ matrix:
         homebrew:
           packages: ['gcc@5', 'fftw', 'mpfr', 'doxygen']
           update: true
-      env: MATRIX_EVAL="export CC=gcc-5 && export BLAS=APPLEBLAS"
+      env: MATRIX_EVAL="export CC=gcc-5 && export FT_USE_APPLEBLAS=1"
     - os: osx
       osx_image: xcode10
       compiler: gcc-6
@@ -27,7 +27,7 @@ matrix:
         homebrew:
           packages: ['gcc@6', 'fftw', 'mpfr', 'doxygen']
           update: true
-      env: MATRIX_EVAL="export CC=gcc-6 && export BLAS=APPLEBLAS"
+      env: MATRIX_EVAL="export CC=gcc-6 && export FT_USE_APPLEBLAS=1"
     # Recommended system requirements
     - os: osx
       osx_image: xcode10
@@ -36,7 +36,7 @@ matrix:
         homebrew:
           packages: ['gcc@7', 'fftw', 'mpfr', 'doxygen']
           update: true
-      env: MATRIX_EVAL="export CC=gcc-7 && export BLAS=APPLEBLAS"
+      env: MATRIX_EVAL="export CC=gcc-7 && export FT_USE_APPLEBLAS=1"
     - os: osx
       osx_image: xcode10
       compiler: gcc-8
@@ -44,7 +44,7 @@ matrix:
         homebrew:
           packages: ['gcc@8', 'fftw', 'mpfr', 'doxygen']
           update: true
-      env: MATRIX_EVAL="export CC=gcc-8 && export BLAS=APPLEBLAS"
+      env: MATRIX_EVAL="export CC=gcc-8 && export FT_USE_APPLEBLAS=1"
     - os: osx
       osx_image: xcode10
       compiler: gcc-9
@@ -52,7 +52,7 @@ matrix:
         homebrew:
           packages: ['gcc@9', 'fftw', 'mpfr', 'doxygen']
           update: true
-      env: MATRIX_EVAL="export CC=gcc-9 && export BLAS=APPLEBLAS"
+      env: MATRIX_EVAL="export CC=gcc-9 && export FT_USE_APPLEBLAS=1"
     # Minimum system requirements
     - os: linux
       compiler: gcc-4.9
@@ -60,21 +60,21 @@ matrix:
         apt:
           sources: ubuntu-toolchain-r-test
           packages: ['gcc-4.9', 'libblas-dev', 'libopenblas-base', 'libfftw3-dev', 'libmpfr-dev', 'doxygen']
-      env: MATRIX_EVAL="export CC=gcc-4.9 && export BLAS=OPENBLAS && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
+      env: MATRIX_EVAL="export CC=gcc-4.9 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
     - os: linux
       compiler: gcc-5
       addons:
         apt:
           sources: ubuntu-toolchain-r-test
           packages: ['gcc-5', 'libblas-dev', 'libopenblas-base', 'libfftw3-dev', 'libmpfr-dev', 'doxygen']
-      env: MATRIX_EVAL="export CC=gcc-5 && export BLAS=OPENBLAS && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
+      env: MATRIX_EVAL="export CC=gcc-5 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
     - os: linux
       compiler: gcc-6
       addons:
         apt:
           sources: ubuntu-toolchain-r-test
           packages: ['gcc-6', 'libblas-dev', 'libopenblas-base', 'libfftw3-dev', 'libmpfr-dev', 'doxygen']
-      env: MATRIX_EVAL="export CC=gcc-6 && export BLAS=OPENBLAS && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
+      env: MATRIX_EVAL="export CC=gcc-6 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
     # Recommended system requirements
     - os: linux
       compiler: gcc-7
@@ -82,21 +82,21 @@ matrix:
         apt:
           sources: ubuntu-toolchain-r-test
           packages: ['gcc-7', 'libblas-dev', 'libopenblas-base', 'libfftw3-dev', 'libmpfr-dev', 'doxygen']
-      env: MATRIX_EVAL="export CC=gcc-7 && export BLAS=OPENBLAS && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
+      env: MATRIX_EVAL="export CC=gcc-7 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
     - os: linux
       compiler: gcc-8
       addons:
         apt:
           sources: ubuntu-toolchain-r-test
           packages: ['gcc-8', 'libblas-dev', 'libopenblas-base', 'libfftw3-dev', 'libmpfr-dev', 'doxygen']
-      env: MATRIX_EVAL="export CC=gcc-8 && export BLAS=OPENBLAS && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
+      env: MATRIX_EVAL="export CC=gcc-8 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
     - os: linux
       compiler: gcc-9
       addons:
         apt:
           sources: ubuntu-toolchain-r-test
           packages: ['gcc-9', 'libblas-dev', 'libopenblas-base', 'libfftw3-dev', 'libmpfr-dev', 'doxygen']
-      env: MATRIX_EVAL="export CC=gcc-9 && export BLAS=OPENBLAS && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
+      env: MATRIX_EVAL="export CC=gcc-9 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
 
 before_install: eval "${MATRIX_EVAL}"
 
