--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,8 +8,8 @@ cache: c:\tools\vcpkg\installed\
 install:
   - set PATH=%PATH%;c:\tools\vcpkg
   - set PATH=%PATH%;C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin\
-  - set CC=gcc && set FT_FFTW_WITH_COMBINED_THREADS=1
-  - vcpkg install openblas:x64-windows fftw3[core,threads]:x64-windows mpir:x64-windows mpfr:x64-windows --recurse
+  - vcpkg install openblas:x64-windows fftw3:x64-windows mpir:x64-windows mpfr:x64-windows
+  #- vcpkg install openblas:x64-windows fftw3[core,threads]:x64-windows mpir:x64-windows mpfr:x64-windows --recurse
   #- mklink c:\projects\fasttransforms\src\cblas.h c:\tools\vcpkg\installed\x64-windows\include\openblas\cblas.h
   #- mklink c:\projects\fasttransforms\src\openblas_config.h c:\tools\vcpkg\installed\x64-windows\include\openblas\openblas_config.h
   - mklink c:\tools\vcpkg\installed\x64-windows\bin\blas.dll c:\tools\vcpkg\installed\x64-windows\bin\openblas.dll
@@ -27,9 +27,10 @@ matrix:
     - image: Visual Studio 2015
 
 build_script:
+  - set CC=gcc && set FT_FFTW_WITH_COMBINED_THREADS=1
   - CC --version
   - mingw32-make lib
-  - mingw32-make tests
+  - mingw32-make wintests
   - mingw32-make examples
 
 test_script:
@@ -42,7 +43,7 @@ test_script:
   - test_dprk.exe
   - test_tdc.exe
   - test_drivers.exe 3 3 0
-  - test_fftw.exe 3 3 0
+  #- test_fftw.exe 3 3 0
   - additiontheorem.exe
   - calculus.exe
   - holomorphic.exe
