--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -28,7 +28,7 @@ matrix:
 
 build_script:
   - set CC=gcc && set FT_FFTW_WITH_COMBINED_THREADS=1
-  - CC --version
+  - gcc --version
   - mingw32-make lib
   - mingw32-make wintests
   - mingw32-make examples
